--- a/newgame.css
+++ b/newgame.css
@@ -1,54 +1,53 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Helvetica
-  
+    font-family: Helvetica;
 }
 
 #splash-text {
-   position: relative;
-   text-align: center;
+    position: relative;
+    text-align: center;
     color: #ff4013;
     padding: 10px;
-    font-size: 20px;
+    font-size: 13px;
     display: flex;
     justify-content: center;
-  
-  }
-  
+}
 
 body {
-    background-color: black;
     color: #ff2600;
+    text-transform: uppercase;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+}
+
+p {
+    color: rgb(255, 255, 255);
+    font-size: 10px;
+}
+
+p1 {
+    color: rgb(255, 38, 0);
     text-transform: uppercase;
 }
 
-
-p{ color: rgb(35, 35, 35);
-   text-transform: uppercase;
- }
-
-p1{ color: rgb(255, 38, 0);
-    text-transform: uppercase;
- }
-
 blink {
-     animation: blinker 1s linear infinite;
- }
- @keyframes blinker {
-     50% {
-         opacity: 0;
-     }
- }
+    animation: blinker 1s linear infinite;
+}
 
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
+}
 
-.game{
-  background-image: url(IMG_5368.jpg); 
-   background-repeat: space;
+.game {
+    background-repeat: space;
     background-size: 100% 100%;
     border: 1px solid;
-    
-
+    position: relative;
 }
 
 .hide {
@@ -56,9 +55,9 @@ blink {
 }
 
 .startScreen {
-    width: 500px;
-    height: 107px;
-    line-height: 20px;
+    width: 330px;
+    height: 95px;
+    line-height: 15px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -68,30 +67,30 @@ blink {
     background-color: rgb(0, 0, 0);
     text-align: center;
     border: .001px solid rgb(255, 64, 255);
-    border-radius: 10px;
-    padding: 10px
+    border-radius: 50px;
+    padding: 10px;
+    drop-shadow: (0 0 0.75rem rgb(255, 255, 255));
 }
 
 .score,
 .highScore {
     position: absolute;
-    top: 50px;
-    left: 20px;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
     text-align: center;
     background-color: rgb(0, 0, 0);
     width: 180px;
     color: rgb(255, 38, 0);
     line-height: 15px;
-    border-radius: 1px;
-    font-size: 15px;
+    border-radius: 6px;
+    font-size: 13px;
     border: .001px solid rgb(0, 0, 0);
-    padding: 10px
-    
+    padding: 10px;
 }
 
 .ClickToStart {
-     cursor: pointer; 
-    font-weight: bold;
+    cursor: pointer;
 }
 
 .gameArea {
@@ -103,7 +102,6 @@ blink {
     overflow: hidden;
     border-left: 3px dashed #282828;
     border-right: 3px dashed #282828;
-
 }
 
 .moto {
@@ -115,8 +113,8 @@ blink {
     rotate: 270deg;
     position: absolute;
     top: 520px;
-   padding: none;
-  overflow: hidden;
+    padding: none;
+    overflow: hidden;
 }
 
 .Opponents {
@@ -126,10 +124,9 @@ blink {
     height: 40px;
     width: 100px;
     rotate: 90deg;
-   position: absolute;
-    top: 520fffpx;
-   padding: none;
-  
+    position: absolute;
+    top: 520px;
+    padding: none;
 }
 
 .roadLines {
@@ -138,7 +135,20 @@ blink {
     background-color: #232323;
     position: absolute;
     margin-left: 195px;
-   justify-content: center;
-  
+    justify-content: center;
+}
+
+.gameContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+    position: relative;
+}
+
+.title-container {
+    margin-bottom: 2px;
 }
 
